--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio with bootstrap</title>
+	<title>Michael Keidar</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="mycss/style.css">
 </head>
@@ -14,7 +14,7 @@
           <img src="images/iddqd.png" width="70px" alt="">
         </a>
         <h2 class="h2logo">&#60;Michael Keidar&#62;</h2>
-        <h5 class="h5logo">Web Development and stuff</h5>
+        <h5 class="h5logo">Front-End Web Development</h5>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,13 +40,14 @@
     <!-- Jumbotron underneath the nav and logo -->
 	<div class="container">
 		<div class="jumbotron">
-  			<div class="row">
-	  			<p class="lead">Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-	  			My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
-  			</div>
+	  		<h1 class="display-3">Hello World! My name is Michael.</h1>
+	  		<p class="lead">I also go by מיכאל, Mike, Миша, Михайло, Michał, and Mihai.</p>
+	  		<hr class="my-4">
+	  		<p>My personality and working abilities are as user friendly and cross-cultural as my name.</p>
 		</div>
 	</div>
 	<!-- !END Jumbotron underneath the nav and logo -->
+	
 	
 	<hr>
 
@@ -54,13 +55,13 @@
 	<div id="about" class="container">
 		<div class="jumbotron">
 	  		<h1 class="display-3">About me</h1>
-	  		<p class="lead">Front-End UI technologies and lorem ipsum cheeki breeki. Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
+	  		<p>From Rehovot, Israel, based in Berlin, Germany since 2013 and counting. I studied Psychology, worked in Insurance, and decided to get into the IT world, starting with web development.</p>
 	  		<hr class="my-2">
 		 	<!-- Grid for computer languages -->
 		 	<div class="container">
 				<div class="comp_langs row text-center">
 					<div class="col-12">
-						<h3 class="text-center py-3">Computer Languages</h3>
+						<h3 class="text-center py-3">Technologies I use</h3>
 						<hr>
 					</div>
 					<div class="col-sm">
@@ -75,6 +76,9 @@
 					<div class="col-sm">
 						<img src="images/python.png" width="200px" title="Python" class="text-center py-4 my-4">
 					</div>
+					<div class="col-sm">
+						<img src="images/linux.jpg" width="200px" title="Linux" class="text-center py-4 my-4">
+					</div>
 				</div>	
 			</div>
 			<!-- !END Grid for computer languages -->
@@ -84,7 +88,7 @@
 				<div class="row">
 					<div class="col-12">
 						<hr>
-						<h3 class="text-center py-3">Human Languages</h3>
+						<h3 class="text-center py-3">Languages I speak</h3>
 						<hr>
 					</div>
 					<div class="col-sm">
@@ -97,12 +101,7 @@
 						<h4 class="text-center py-3 my-3">אני מדבר עברית<br><img src="images/il.svg" width="100px" class="text-center py-2 my-2"></h4>
 					</div>
 				</div>
-		<!--</div>-->
-				<div class="row">
-					<div class="col-sm">
-						<p class="text-center py-3">I also speak some Spanish and Russian. &#161Hola товарищ!<!-- <br><img src="images/ru.svg" width="50px"><img src="images/es.svg" width="50px"></p> -->
-					</div>
-				</div>	
+				<p>I also have some basic knowledge of Spanish and Russian, and I'm always eager to learn new languages. </p>
 			</div>
 			<!-- !END Grid for human languages -->
 
@@ -118,18 +117,18 @@
 	<div id="contact" class="container">
 		<div class="jumbotron">
   			<h1 class="display-3">Contact</h1>
-  				<p class="lead">Please send me job offers. Being broke sucks. You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
+  				<p class="lead">Feel free to contact me with any questions and/or job opportunities </p>
   		<hr class="my-2">
-  			<p>Feel free to contact me in any of the available options presented here.</p>
   			<div class="row">
   				<div class="col-sm">
-  					<h4>E-Mail</h4>
+  					<a href="mailto:keidarster@gmail.com" title="Email"><img src="images/email.svg" width="50px" class="text-center py-2 my-2"></a>
 				</div>
   				<div class="col-sm">
-  					<h4>Phone</h4>
+  					<a href="https://www.linkedin.com/in/michael-keidar-152244150
+					" title="LinkedIn" target="_blank"><img src="images/linkedin.jpg" width="50px" class="text-center py-2 my-2"></a>
   				</div>
   				<div class="col-sm">
-  					<h4>LinkedIn</h4>
+  					<a href="https://github.com/keidarster" title="GitHub" target="_blank"><img src="images/github.svg" width="50px" class="text-center py-2 my-2"></a>
   				</div>
   			</div>
 		</div>
