modified some content

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
     <!-- Jumbotron underneath the nav and logo -->
 	<div class="container">
 		<div class="jumbotron">
-	  		<h1 class="display-3">Hello World! My name is Michael.</h1>
-	  		<p class="lead">I also go by מיכאל, Mike, Миша, Михайло, Michał, and Mihai.</p>
+	  		<h1 class="display-4">Hello World!</h1>
+	  		<h3 class="display-3 text-center">My name is Michael.</h3>
+	  		<p class="lead text-center">I also go by מיכאל, Mike, and Миша.</p>
 	  		<hr class="my-4">
-	  		<p>My personality and working abilities are as user friendly and cross-cultural as my name.</p>
+	  		<p class="text-center">My personality and working abilities are as user friendly and cross-cultural as my name.</p>
 		</div>
 	</div>
 	<!-- !END Jumbotron underneath the nav and logo -->
@@ -77,7 +78,7 @@
 						<img src="images/python.png" width="200px" title="Python" class="text-center py-4 my-4">
 					</div>
 					<div class="col-sm">
-						<img src="images/linux.jpg" width="200px" title="Linux" class="text-center py-4 my-4">
+						<img src="images/linux.jpg" width="200px" height="140px" title="Linux" class="text-center py-4 my-4">
 					</div>
 				</div>	
 			</div>
@@ -92,16 +93,16 @@
 						<hr>
 					</div>
 					<div class="col-sm">
-						<h4 class="text-center py-3 my-3">I speak English<br><img src="images/us.svg" width="100px" class="text-center py-2 my-2"></h4>
+						<h4 class="text-center py-3 my-3">English<br><img src="images/us.svg" width="100px" class="text-center py-2 my-2"></h4>
 					</div>
 					<div class="col-sm">
-						<h4 class="text-center py-3 my-3">Ich spreche Deutsch<br><img src="images/de.svg" width="100px" class="text-center py-2 my-2"></h4>
+						<h4 class="text-center py-3 my-3">Deutsch<br><img src="images/de.svg" width="100px" class="text-center py-2 my-2"></h4>
 					</div>
 					<div class="col-sm">
-						<h4 class="text-center py-3 my-3">אני מדבר עברית<br><img src="images/il.svg" width="100px" class="text-center py-2 my-2"></h4>
+						<h4 class="text-center py-3 my-3">עברית<br><img src="images/il.svg" width="100px" class="text-center py-2 my-2"></h4>
 					</div>
 				</div>
-				<p>I also have some basic knowledge of Spanish and Russian, and I'm always eager to learn new languages. </p>
+				<p class="text-center">I also have some basic knowledge of Spanish and Russian, and I'm always eager to learn new languages. </p>
 			</div>
 			<!-- !END Grid for human languages -->
 
@@ -121,14 +122,14 @@
   		<hr class="my-2">
   			<div class="row">
   				<div class="col-sm">
-  					<a href="mailto:keidarster@gmail.com" title="Email"><img src="images/email.svg" width="50px" class="text-center py-2 my-2"></a>
+  					<a href="mailto:keidarster@gmail.com" title="Email"><img src="images/email.svg" width="50px" class="rounded mx-auto d-block py-2 my-2"></a>
 				</div>
   				<div class="col-sm">
   					<a href="https://www.linkedin.com/in/michael-keidar-152244150
-					" title="LinkedIn" target="_blank"><img src="images/linkedin.jpg" width="50px" class="text-center py-2 my-2"></a>
+					" title="LinkedIn" target="_blank"><img src="images/linkedin.jpg" width="50px" class="rounded mx-auto d-block py-2 my-2"></a>
   				</div>
   				<div class="col-sm">
-  					<a href="https://github.com/keidarster" title="GitHub" target="_blank"><img src="images/github.svg" width="50px" class="text-center py-2 my-2"></a>
+  					<a href="https://github.com/keidarster" title="GitHub" target="_blank"><img src="images/github.svg" width="50px" class="rounded mx-auto d-block py-2 my-2"></a>
   				</div>
   			</div>
 		</div>
